load("@rules_deb//distroless:defs.bzl", "flatten")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@tar.bzl", "tar")

flatten(
    name = "apt_deps",
    deduplicate = True,
    tars = [
        "@bookworm//libteam5:data",
        "@bookworm//libteamdctl0:data",
        "@bookworm//python3-dev",
        "@bookworm//protobuf-compiler:data",
        "@bookworm//python3-protobuf:data",
        # TODO(bazel-ready): Determine if we need a different version of iputils-ping.
        # The Dockerfile runs `apt-get update` before installing this dependency,
        # so the version from the snapshot might be out of date.
        "@bookworm//iputils-ping:data",
    ],
)

flatten(
    name = "rdeps",
    deduplicate = True,
    tars = [
        "@sonic_sairedis//meta:libsaimetadata_dev_pkg",
        "@sonic_sairedis//lib:libsairedis_dev_pkg",
        "@sonic_dash_api//:libdashapi_dev_pkg",
        "@sonic_swss_common//pyext:swsscommon_pkg",
        # TODO(bazel-ready): Port libswsscommon if swsscommon_dist is not enough
        # # $(LIBSWSSCOMMON)
        # "@sonic_swss_common//:libswsscommon",
    ],
)

oci_image(
    name = "docker-swss-layer-bookworm",
    base = "//dockers/docker-config-engine-bookworm",
    entrypoint = ["/usr/bin/supervisord"],
    env = {
        "DEBIAN_FRONTEND": "noninteractive",
    },
    tars = [
        ":apt_deps",
        ":rdeps",
        "@sonic_swss//:debian-data",
    ],
    visibility = [
        "//dockers/docker-orchagent:__subpackages__",
        "//dockers/docker-sflow:__subpackages__",
        "//dockers/docker-swss-layer-bookworm:__subpackages__",
    ],
)

oci_load(
    name = "load",
    image = ":docker-swss-layer-bookworm",
    repo_tags = ["docker-swss-layer-bookworm:latest"],
)
