module(
    name = "libnl3",
    version = "3.7.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.2.10")
bazel_dep(name = "tar.bzl", version = "0.8.1")
bazel_dep(name = "rules_distroless", version = "0.0.0", repo_name = "rules_deb")
local_path_override(
    module_name = "rules_distroless",
    path = "../../../rules_distroless",
)

bazel_dep(name = "sonic-build-infra", version = "0.0.0", repo_name = "sonic_build_infra")
local_path_override(
    module_name = "sonic-build-infra",
    path = "../../../sonic-build-infra",
)

# TODO(bazel-ready): Make work with all relevant versions of libnl.
# For now, we only resolve the version pinned in @bookworm from our selected debian snapshot.
LIBNL_3_VERSION = "3.7.0"

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "libnl3_src",
    build_file = "//:libnl3.BUILD",
    patch_args = ["-p1"],
    patches = [
        "//:patch/0003-Adding-support-for-RTA_NH_ID-attribute.patch",
        "//:patch/fix-icmp6-mib-max-assert.patch",
    ],
    sha256 = "9fe43ccbeeea72c653bdcf8c93332583135cda46a79507bfd0a483bb57f65939",
    strip_prefix = "libnl-{}".format(LIBNL_3_VERSION),
    urls = ["http://debian-archive.trafficmanager.net/debian/pool/main/libn/libnl3/libnl3_{}.orig.tar.gz".format(LIBNL_3_VERSION)],
)

# TODO(bazel-ready): Fetch from @bookworm if we implement binary support for rules_distroless.
# Flex and bison tooling for generating lexer/parser sources.
# Following the pattern from src/sonic-sysmgr for extracting binaries from debs.
# Please see `src/sonic-sysmgr/MODULE.bazel` for context on why this pattern looks like it does.
http_archive(
    name = "flex_data",
    build_file = "//:flex_bin.BUILD",
    sha256 = "da3fd55dbb6aff4f7b3187580813e0ef707d0c596402e37c8fd144df60003636",
    urls = ["http://debian-archive.trafficmanager.net/debian/pool/main/f/flex/flex_2.6.4-8.2_amd64.deb"],
)

http_archive(
    name = "bison_data",
    build_file = "//:bison_bin.BUILD",
    sha256 = "a414afd7519c53bfa33415ba5b951bc8b4906877004c49723ffda50a6033c3e8",
    urls = ["http://debian-archive.trafficmanager.net/debian/pool/main/b/bison/bison_3.8.2+dfsg-1+b1_amd64.deb"],
)

http_archive(
    name = "m4_data",
    build_file = "//:m4_bin.BUILD",
    sha256 = "b2dd7bfca426712416e651bb5ff6dabe7d05e4caebbac61d714dbe261b31e4c3",
    urls = ["http://debian-archive.trafficmanager.net/debian/pool/main/m/m4/m4_1.4.19-3_amd64.deb"],
)

extract_tar = use_repo_rule("@sonic_build_infra//tar:extract_tar.bzl", "extract_tar")

extract_tar(
    name = "flex_bin",
    archive = "@flex_data//:data.tar.xz",
    build_file = "//:flex_bin.BUILD",
)

extract_tar(
    name = "bison_bin",
    archive = "@bison_data//:data.tar.xz",
    build_file = "//:bison_bin.BUILD",
)

extract_tar(
    name = "m4_bin",
    archive = "@m4_data//:data.tar.xz",
    build_file = "//:m4_bin.BUILD",
)
