module(
    name = "libnl3",
    version = "3.7.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "bazel_lib", version = "3.1.1")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "tar.bzl", version = "0.8.1")
bazel_dep(name = "rules_distroless", version = "0.0.0", repo_name = "rules_deb")
bazel_dep(name = "platforms", version = "1.0.0")
local_path_override(
    module_name = "rules_distroless",
    path = "../../../rules_distroless",
)

bazel_dep(name = "sonic-build-infra", version = "0.0.0", repo_name = "sonic_build_infra")
local_path_override(
    module_name = "sonic-build-infra",
    path = "../../../sonic-build-infra",
)

register_toolchains("@sonic_build_infra//toolchains/gcc:host_gcc_toolchain")

# TODO(bazel-ready): Make work with all relevant versions of libnl.
# For now, we only resolve the version pinned in @bookworm from our selected debian snapshot.
LIBNL_3_VERSION = "3.7.0"

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "libnl3_src",
    build_file = "//:libnl3.BUILD",
    patch_args = ["-p1"],
    patches = [
        "//:patch/0003-Adding-support-for-RTA_NH_ID-attribute.patch",
        "//:patch/fix-icmp6-mib-max-assert.patch",
    ],
    sha256 = "9fe43ccbeeea72c653bdcf8c93332583135cda46a79507bfd0a483bb57f65939",
    strip_prefix = "libnl-{}".format(LIBNL_3_VERSION),
    urls = ["http://debian-archive.trafficmanager.net/debian/pool/main/libn/libnl3/libnl3_{}.orig.tar.gz".format(LIBNL_3_VERSION)],
)

bazel_dep(name = "bison", version = "3.8.2.bcr.2")
bazel_dep(name = "flex", version = "2.6.4")
bazel_dep(name = "rules_flex", version = "0.4")
bazel_dep(name = "rules_m4", version = "0.3")
# TODO BL: replace with new version of rules_m4 when this merges:
#  https://github.com/jmillikin/rules_m4/pull/23
local_path_override(
    module_name = "rules_m4",
    path = "../../../rules_m4",
)
m4 = use_extension(
    "@rules_m4//m4/extensions:m4_repository_ext.bzl",
    "m4_repository_ext",
)
m4.repository(
    name = "m4",
    version = "1.4.18",
    extra_copts = [
        "-O3",
        # Disable warnings that are particularities of our toolchain.
        "-Wno-sign-compare",
        "-Wno-unused-parameter",
        "-Wno-implicit-fallthrough",
        "-Wno-attributes",
        "-Wno-vla-parameter",
    ],
)
use_repo(m4, "m4")
register_toolchains("@m4//:toolchain")
