module(
    name = "libteam",
    version = "1.31",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "tar.bzl", version = "0.8.1")
bazel_dep(name = "rules_distroless", version = "0.0.0", repo_name = "rules_deb")
local_path_override(
    module_name = "rules_distroless",
    path = "../../../rules_distroless",
)

bazel_dep(name = "sonic-build-infra", version = "0.0.0", repo_name = "sonic_build_infra")
local_path_override(
    module_name = "sonic-build-infra",
    path = "../../../sonic-build-infra",
)

register_toolchains("@sonic_build_infra//toolchains/gcc:host_gcc_toolchain")

# Build dependencies from Debian bookworm
apt = use_extension("@rules_deb//apt:extensions.bzl", "apt")
apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = ["bookworm"],
    uris = ["https://snapshot.debian.org/archive/debian/20251001T023456Z"],
)
apt.install(
    dependency_set = "libteam_deps",
    packages = [
        "libdaemon-dev",
        "libdbus-1-dev",
        "libjansson-dev",
        "libnl-3-dev",
        "libnl-cli-3-dev",
        "libnl-genl-3-dev",
        "libnl-route-3-dev",
        "libzmq3-dev",
        "libbsd-dev",
    ],
    suites = ["bookworm"],
)
use_repo(apt, "libteam_deps")

# libteam C library source from Debian
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "libteam_src",
    build_file = "//:libteam.BUILD",
    patch_args = ["-p1"],
    patches = [
        "//:patch/0001-libteam-Temporarily-remove-redundant-debug-messages.patch",
        "//:patch/0002-teamd-lacp-runner-will-send-lacp-update-right-after-.patch",
        "//:patch/0003-libteam-Add-fallback-support-for-single-member-port-.patch",
        "//:patch/0005-Increase-default-buffer-size-from-98304-to-2097152.patch",
        "//:patch/0006-teamd-Administratively-shutdown-port-channel-has-mem.patch",
        "//:patch/0008-libteam-Add-warm_reboot-mode.patch",
        "//:patch/0011-Remove-extensive-debug-output.patch",
        "//:patch/0012-Increase-min_ports-upper-limit-to-1024.patch",
        "//:patch/0013-set-port-to-disabled-state-during-removal.patch",
        "//:patch/0014-dont-move-the-port-state-from-disabled-when-admin-state-is-down.patch",
        "//:patch/0015-add-support-for-custom-retry.patch",
        "//:patch/0016-block-retry-count-changes.patch",
        "//:patch/0017-Specify-netlink-recv-buffer-size-to-avoid-a-syscall.patch",
    ],
    sha256 = "a39c636a71c30c631a9dcf1f175597dabb19594e4fb4a3129eb5a58d1701d486",
    strip_prefix = "libteam-1.31",
    urls = ["http://debian-archive.trafficmanager.net/debian/pool/main/libt/libteam/libteam_1.31.orig.tar.xz"],
)
