module(name = "libyang", version = "1.0.73")

bazel_dep(name = "rules_cc", version = "0.2.10")
bazel_dep(name = "tar.bzl", version = "0.8.1")
# TODO(bazel-ready): Replace with tar 0.10.0 once it's released to the BCR.
git_override(
    module_name = "tar.bzl",
    commit = "9b76e660363ab2465d89d3aadbbc1f7afa02e65c",
    remote = "https://github.com/bazel-contrib/tar.bzl",
)
bazel_dep(name = "rules_distroless", version = "0.0.0", repo_name = "rules_deb")

bazel_dep(name = "platforms", version = "1.0.0")

bazel_dep(name = "sonic-build-infra", version = "0.0.0", repo_name = "sonic_build_infra")

register_toolchains("@sonic_build_infra//toolchains/gcc:host_gcc_toolchain")

# Get pcre, swig, and python3-dev from Debian bookworm
apt = use_extension("@rules_deb//apt:extensions.bzl", "apt")
apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = ["bookworm"],
    uris = ["https://snapshot.debian.org/archive/debian/20251001T023456Z"],
)
apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = ["bookworm-security"],
    uris = ["https://snapshot.debian.org/archive/debian-security/20251001T023456Z"],
)
apt.install(
    dependency_set = "libyang_deps",
    suites = ["bookworm", "bookworm-security"],
    packages = [
        "libpcre3-dev",
        "swig",
        "python3-dev",
    ],
)
use_repo(apt, "libyang_deps")

# libyang C library source from GitHub
libyang_src = use_repo_rule("//:libyang_src.bzl", "libyang_src")
libyang_src(
    name = "libyang_src",
    urls = ["https://github.com/CESNET/libyang/archive/refs/tags/v1.0-r4.tar.gz"],
    sha256 = "411f0c675b0858f8deabc0545e33fbd791ff7c7a5b7d2c27e347e3973d5b8ae4",
    strip_prefix = "libyang-1.0-r4",
    build_file_template = "//:libyang.BUILD",
    patches = [
        "//:patch/libyang.patch",
        "//:patch/libyang_mgmt_framework.patch",
        "//:patch/swig.patch",
        "//:patch/large_file_support_arm32.patch",
        "//:patch/debian-packaging-files.patch",
        "//:patch/libyang-leaf-must.patch",
    ],
    extra_files = [
        "//:build_constants.bzl",
        "//:pkg_path.bzl",
        "//:bazel_tests/libyang_pkg.expected.txt",
        "//:bazel_tests/libyang-dev_pkg.expected.txt",
        "//:bazel_tests/python3-yang_pkg.expected.txt",
        "//:bazel_tests/libyang-cpp_pkg.expected.txt",
    ],
)

