alias(
    name = "libyang3",
    actual = "@libyang3_src//:libyang3",
    visibility = ["//visibility:public"],
)

# Export headers for downstream consumers
alias(
    name = "headers",
    actual = "@libyang3_src//:public_headers",
    visibility = ["//visibility:public"],
)

# Shared library for runtime use in containers
alias(
    name = "libyang3_shared",
    actual = "@libyang3_src//:libyang3_shared",
    visibility = ["//visibility:public"],
)
